--- a/Textures/Textures.csproj
+++ b/Textures/Textures.csproj
@@ -2,6 +2,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Meteorite\Meteorite.csproj" />
+    <Content Include="Resources/**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <PropertyGroup>
