--- a/Examples/HelloTriangle/HelloTriangle.csproj
+++ b/Examples/HelloTriangle/HelloTriangle.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\meteorite\Meteorite.csproj" />
+    <ProjectReference Include="..\..\meteorite\Meteorite.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
