--- a/Examples/Sprites/Sprites.csproj
+++ b/Examples/Sprites/Sprites.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Meteorite\Meteorite.csproj" />
+    <ProjectReference Include="..\..\Meteorite\Meteorite.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
