--- a/Examples/Textures/Textures.csproj
+++ b/Examples/Textures/Textures.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Meteorite\Meteorite.csproj" />
+    <ProjectReference Include="..\..\Meteorite\Meteorite.csproj" />
     <Content Include="Resources/**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
