--- a/Meteorite/Meteorite.csproj
+++ b/Meteorite/Meteorite.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="GlmSharp" Version="0.9.8" />
+		<PackageReference Include="ImGui.NET" Version="1.88.0" />
 		<PackageReference Include="OpenTK" Version="4.7.4" />
 		<PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
 		<Using Include="GlmSharp" />
